# clientcache

./: CMakeLists.txt  README.md  cache.hpp  cacheimpl.cpp  cacheimpl.hpp  crypt.cpp  crypt.hpp  os.cpp  os.hpp  performance validation.html  performance validation.pvm  scoped_handle.hpp  stdinc.hpp  unittest.cpp
